:lazy_loading config option gets filtered out

--- a/TODO
+++ b/TODO
@@ -1,6 +1,7 @@
 Caching - investigate reusing (fragment?) caching of Rails.
 Use Ext.Direct in the Netzke controller.
 Let specify per API point if it will use a GET or a POST request.
+Re-work generators
 
 Rails 3
 * jsmin
