--- a/CHANGELOG.rdoc
+++ b/CHANGELOG.rdoc
@@ -1,22 +1,22 @@
 = v0.6.0 - EDGE
 * Rails3 compatibility
 
-* Broken backward compatibility
+* API backward incompatibility
   * ext_config config level is removed; put all that configuration in the top level
   * mentioning actions in the bbar, tbar, etc, should be explicit, e.g.:
   
       :bbar => [:apply.ext_action, :delete.ext_action]
       
-  * +late_aggregatee+ option becomes +lazy_loading+
-  * aggregatee are now called components
-  * widgets is now called components
-  * 'api' is now called 'endpoint'
-
+  * late_aggregatee option becomes lazy_loading
+  * "aggregatees" are now "components"
+  * "widgets" are now "components"
+  * 'api' is now 'endpoint'
+  * persistent_config_enabled? is now persistence_enabled?
+  
 * New
   * Use the +ext+ helper in the views to embed any (pure) Ext component into a view.
   
-* Deprecations
-  * buildApiUrl deprecated in favor of endpointUrl
+* Different deprecations throughout the code
   
 = v0.5.3 - 2010-06-14
 * Fix: Getting rid of deprecation warnings about tasks not sitting in lib.
