DSL method "component" introduced to define aggregates.

--- a/TODO
+++ b/TODO
@@ -1,3 +1,4 @@
+Get rid of fiddling with scopes in JS, always use xtype.
 Caching - investigate reusing (fragment?) caching of Rails.
 Use Ext.Direct in the Netzke controller.
 Let specify per API point if it will use a GET or a POST request.
