CHANGELOG and README update

--- a/CHANGELOG.rdoc
+++ b/CHANGELOG.rdoc
@@ -16,6 +16,7 @@
   * +late_component+ option becomes +lazy_loading+
   * component are now called components
   * Widget is now called Component
+  * Using the js_extend_properties class method in your components in deprecated (and maybe even broken). Use js_property (or js_properties) and js_method instead (see multiple examples in test/rails_app)
 
 * New
   * Use the +ext+ helper in the views to embed any (pure) Ext component into a view.
