Loading of the plugin cleaned up

--- a/TODO
+++ b/TODO
@@ -1,11 +1,9 @@
+Make plugin-wide javascripts and stylesheets load automatically.
 Get rid of fiddling with scopes in JS, always use xtype.
 Caching - investigate reusing (fragment?) caching of Rails.
 Use Ext.Direct in the Netzke controller.
 Let specify per API point if it will use a GET or a POST request.
 Re-work generators
-
-Rails 3
-* jsmin
 
 Some day
 * make gzipping generated JS code possible
