Further code restructuring: moving Base-related modules out of the Base class itself; the Context module introduced instead of the Main class

--- a/TODO
+++ b/TODO
@@ -1,3 +1,4 @@
+Replace ext_action with action
 Make plugin-wide javascripts and stylesheets load automatically.
 Caching - investigate reusing (fragment?) caching of Rails.
 Use Ext.Direct in the Netzke controller.
