--- a/README.rdoc
+++ b/README.rdoc
@@ -1,48 +1,80 @@
 = netzke-core
 
-Create Ext JS + Rails reusable components (components) with minimum effort.
+Create Ext JS + Rails components with minimum effort.
 
 This is the bare bones of the Netzke framework. Use it to build your own components from scratch. For pre-built components (like panels, grids, forms, trees, applications), see the netzke-basepack (http://github.com/skozlov/netzke-basepack) project.
 
-The idea behind the Netzke framework is that it allows you write reusable client/server code. Create a component, and then embed it straight to your Rails' view, load it dynamically into your Ext-based applications, or use it as a building block for other components. For more info, see the links below.
+The idea behind the Netzke framework is that it allows you write reusable client/server code. Create a component, and then embed it straight to your Rails' view, load it dynamically into your Ext-based applications, or use it as a building block for other (composite) components. For more info, see the links below.
 
 == Installation
-For the latest ("edge") stuff, install as plugin:
+
+For the latest ("edge") stuff, tell bundler to get the gem straight from github:
+
+    gem 'netzke-core', :git => "git@github.com:skozlov/netzke-core.git", :branch => "rails3"
+
+Or install as plugin:
 
     rails plugin install git://github.com/skozlov/netzke-core.git -r rails3
     
-Or tell bundler to get the gem straight from github:
-
-    gem 'netzke-core', :git => "git@github.com:skozlov/netzke-core.git", :branch => "rails3"
-    
-To generate the migrations for Netzke persistent storage:
-
-    rails g netzke:core
-
 Netzke assumes that your ExtJS library is in public/extjs (which may be a symbolic link):
 
     ln -s ~/code/sencha/ext-3.2.1 public/extjs
 
 == Usage
-Here's how to embed a Netzke component into your Rails view.
+
+Let's create a simple "Hello world!" component and embed it into a Rails' view. It'll be an Ext.Panel-based component with a button that triggers a client-server communication.
+
+Create YOUR_APP/app/components/hello_world_component.rb, and put in the following content:
+
+    class HelloWorldComponent < Netzke::Base
+      # Ext.Panel's config option "title"
+      js_property :title, "My Hello World Component"
+
+      # Bottom bar with an automatically created action
+      js_property :bbar, [:bug_server.ext_action]
+
+      # Method in the JS class that (by default) processes the action's "click" event
+      js_method :on_bug_server, <<-JS
+        function(){
+          // Remotely calling the server's method greet_the_world (defined below)
+          this.greetTheWorld();
+        }
+      JS
+
+      # Server's method that gets called from the JS
+      endpoint :greet_the_world do |params|
+        # Tell the client side to call its method showGreeting with "Hello World!" as parameter
+        {:show_greeting => "Hello World!"}
+      end
+
+      # Another method in the JS class that gets remotely called by the server side
+      js_method :show_greeting, <<-JS
+        function(greeting){
+          this.body.update("Server says: " + greeting);
+        }
+      JS
+    end
+
+
+To embed a Netzke component into your Rails view do the following:
 
 1. In your layout, within the "head" tag, use the <tt>netzke_init</tt> helper to include all the necessary JavaScript and styles. 
 
     <%= netzke_init %>
 
-You can optionally specify an Ext theme to be used:
+You can optionally specify an Ext theme:
 
     <%= netzke_init :ext_theme => 'grey' %>
       
-2. In your view use the <tt>netzke</tt> helper to embed a component. Here's an example showing how to embed a <tt>Netzke::GridPanel</tt>:
+2. In your view use the <tt>netzke</tt> helper to embed the component:
 
-    <%= netzke :users, :class_name => "Basepack::GridPanel", :model => "User" %>
+    <%= netzke :hello_world_component %>
+
+That's it. While playing with the component, use Firebug or similar tool to check the AJAX requests to understand better what's going on behind the scenes. Also check the source code of the page embedding the component.
 
 == Running tests
 
-netzke-core is bundled with cucumber and RSpec tests. Check its source code to get an idea about the basic functionality of the framework.
-
-Before you can run the tests, you must link your Ext JS library to test/rails_app/public, e.g. (from plugin's root):
+netzke-core is bundled with cucumber and RSpec tests. Before you can run them, you must link your Ext JS library to test/rails_app/public, e.g. (from plugin's root):
 
     ln -s ~/code/sencha/ext-3.2.1 test/rails_app/public/extjs
 
@@ -56,9 +88,9 @@ RSpec tests:
     
 == Testing playground
 
-The test/rails_app application is also a convenient playground, as it may be run as independent Rails 3 app. After starting it, access any of the lib/netzke test components by using the following url:
+The bundled test/rails_app application is also a convenient playground, as it may be run as a stand-alone Rails app. After starting it, access any of the app/components/netzke test components by using the following url:
 
-    http://localhost:3000/components/<name of the component class>
+    http://localhost:3000/components/<name of the component's class>
 
 e.g.:
   
@@ -70,7 +102,7 @@ or, for scoped components:
 
 == Migrating from 0.5.x
 
-There have been a significant amount of changes that made 0.6 version backward-incompatible. Please, refer to CHANGELOG.rdoc for the (hopefully) full list of changes that most certainly made your current application break. Additionally, this wiki page may be of some help, too: http://github.com/skozlov/netzke-core/wiki/Upgrading-from-0.5.x-to-0.6.0
+There have been a significant amount of changes that made 0.6 version backward-incompatible. Please, refer to CHANGELOG.rdoc for the (hopefully) full list of changes that most certainly would make your current application break. Additionally, this wiki page may be of some help, too: http://github.com/skozlov/netzke-core/wiki/Upgrading-from-0.5.x-to-0.6.0
 
 == More info
 Netzke website: http://netzke.org
