--- a/CHANGELOG.rdoc
+++ b/CHANGELOG.rdoc
@@ -61,7 +61,7 @@
 * Code: lightly better test coverage
 * New: <tt>Netzke::Base#global_id_by_reference</tt> method
 * Compatibility: resolving conflicts with the <tt>api</tt> property in some Ext v3.0 components
-* Fix: <tt>load_component_with_cache</tt> was throwing exception when the requested component wasn't defined
+* Fix: <tt>deliver_component</tt> was throwing exception when the requested component wasn't defined
 * New: <tt>persistent_config_id</tt> configuration option allows specifying an id by which persistent configuration is identified for the widget. Handy if different homogeneous widgets need to share the same persistent configuration.
 * New: <tt>Netzke::Base#persistent_config</tt> method now accepts an optional boolean parameter signalizing that the configuration is global (not bound to a widget)
 * Impr: cleaner handling of actions and toolbars; fbar configuration introduced.
