Cleaner handling of the case when an endpoint doesn't return a hash or array

--- a/TODO
+++ b/TODO
@@ -6,3 +6,19 @@ Re-work generators
 
 Some day
 * make gzipping generated JS code possible
+
+
+= Ideas that didn't work out
+
+== Making value from super-class accessible in the block parameters in endpoints, e.g.:
+
+    endpoint :call_server do |params, orig|
+      orig.merge(:set_title => orig[:set_title] + " extended")
+    end
+  
+Bad idea because calling the super method is often required AFTER doing something in the override, not BEFORE. For example, deliver_component in GridPanel in Basepack is overridden to reconfigure the components on the fly before actually delivering the component (i.e. calling super).
+So, to override an endpoint, simply define a method with endpoint's name, e.g.:
+
+    def call_server(params)
+      super.merge(...)
+    end
