--- a/README.rdoc
+++ b/README.rdoc
@@ -10,15 +10,15 @@ The idea behind the Netzke framework is that it allows you write reusable client
 
 For the latest ("edge") stuff, tell bundler to get the gem straight from github:
 
-    gem 'netzke-core', :git => "git://github.com/skozlov/netzke-core.git", :branch => "rails3"
+    gem 'netzke-core', :git => "git://github.com/skozlov/netzke-core.git"
 
 Or install as plugin:
 
-    rails plugin install git://github.com/skozlov/netzke-core.git -r rails3
+    rails plugin install git://github.com/skozlov/netzke-core.git
     
 Netzke assumes that your ExtJS library is in public/extjs (which may be a symbolic link):
 
-    ln -s ~/code/sencha/ext-3.2.1 public/extjs
+    ln -s ~/code/sencha/ext-3.3.0 public/extjs
 
 == Usage
 
@@ -76,7 +76,7 @@ That's it. While playing with the component, use Firebug or similar tool to chec
 
 netzke-core is bundled with cucumber and RSpec tests. Before you can run them, you must link your Ext JS library to test/rails_app/public, e.g. (from plugin's root):
 
-    ln -s ~/code/sencha/ext-3.2.1 test/rails_app/public/extjs
+    ln -s ~/code/sencha/ext-3.3.0 test/rails_app/public/extjs
 
 For cucumber tests:
 
@@ -88,7 +88,7 @@ RSpec tests:
     
 == Testing playground
 
-The bundled test/rails_app application is also a convenient playground, as it may be run as a stand-alone Rails app. After starting it, access any of the app/components/netzke test components by using the following url:
+The bundled test/rails_app application is also a convenient playground to learn more about the framework, as it may be run as a stand-alone Rails app. It's also a pretty good source of examples. After starting it, access any of the app/components/netzke test components by using the following url:
 
     http://localhost:3000/components/<name of the component's class>
 
