--- a/README.rdoc
+++ b/README.rdoc
@@ -16,11 +16,11 @@ The idea behind the Netzke framework is that it allows you write reusable client
 
 For the latest ("edge") stuff, tell bundler to get the gem straight from github:
 
-    gem 'netzke-core', :git => "git://github.com/skozlov/netzke-core.git"
+    gem 'netzke-core', :git => "git://github.com/skozlov/netzke-core.git", :branch => 'rails3'
 
 Or install as plugin:
 
-    rails plugin install git://github.com/skozlov/netzke-core.git
+    rails plugin install git://github.com/skozlov/netzke-core.git -r rails3
     
 Netzke assumes that your ExtJS library is in public/extjs (which may be a symbolic link):
 
@@ -38,6 +38,9 @@ Create YOUR_APP/app/components/hello_world_component.rb, and put in the followin
 
       # Bottom bar with an automatically created action
       js_property :bbar, [:bug_server.action]
+
+      # Action to be placed on the bottom bar
+      action :bug_server, :text => 'Ask server', :icon => :accept
 
       # Method in the JS class that (by default) processes the action's "click" event
       js_method :on_bug_server, <<-JS
@@ -64,7 +67,15 @@ Create YOUR_APP/app/components/hello_world_component.rb, and put in the followin
 
 To embed a Netzke component into your Rails view do the following:
 
-1. In your layout, within the "head" tag, use the <tt>netzke_init</tt> helper to include all the necessary JavaScript and styles.
+1. In config/routes.rb add the following:
+
+    # in routes.rb
+    RailsApp::Application.routes.draw do
+      netzke
+      ...
+    end
+
+2. In your layout, within the "head" tag, use the <tt>netzke_init</tt> helper to include all the necessary JavaScript and styles.
 
     <%= netzke_init %>
 
@@ -72,7 +83,7 @@ You can optionally specify an Ext theme:
 
     <%= netzke_init :ext_theme => 'grey' %>
       
-2. In your view use the <tt>netzke</tt> helper to embed the component:
+3. In your view use the <tt>netzke</tt> helper to embed the component:
 
     <%= netzke :hello_world_component %>
 
