--- a/README.rdoc
+++ b/README.rdoc
@@ -9,18 +9,18 @@ The idea behind the Netzke framework is that it allows you write reusable client
 == Requirements
 
 * Rails >= 3.0.0
-* Ruby >= 1.9.2 (1.8.7 should work, but is not supported as diligently)
+* Ruby >= 1.9.2 (1.8.7 should work, but may not be supported as diligently)
 * Ext >= 3.3.0
 
 == Installation
 
 For the latest ("edge") stuff, tell bundler to get the gem straight from github:
 
-    gem 'netzke-core', :git => "git://github.com/skozlov/netzke-core.git", :branch => "rails3"
+    gem 'netzke-core', :git => "git://github.com/skozlov/netzke-core.git"
 
 Or install as plugin:
 
-    rails plugin install git://github.com/skozlov/netzke-core.git -r rails3
+    rails plugin install git://github.com/skozlov/netzke-core.git
     
 Netzke assumes that your ExtJS library is in public/extjs (which may be a symbolic link):
 
