--- a/CHANGELOG.rdoc
+++ b/CHANGELOG.rdoc
@@ -4,7 +4,7 @@
   * Persistence suppor
 
 * API change
-  * +endpoint+ DSL call now results in a method called <endpoint_name>_endpoint, _not_ just <endpoint_name> (beware when overriding endpoint definitions)
+  * +endpoint+ DSL call now results in a method called <endpoint_name>_endpoint, _not_ just <endpoint_name> (beware when overriding endpoint definitions, or calling endpoint methods on child components)
 
 = v0.6.3 - 2010-11-02
 * The +ext_config+ option is back, deprecated.
