--- a/CHANGELOG.rdoc
+++ b/CHANGELOG.rdoc
@@ -131,7 +131,7 @@
 * New: Netzke::Base.session introduced for session data
 * New: weak_children_config and strong_children_config can now be declared by a widget, which specifies weak and strong configuration that every child of this widget will receive (e.g. display/hide configuration tool)
 * Fix: (degradation) flash message is now shown again in case of erroneous attempt to load a widge
-* New: widgets now can check session[:netzke_just_logged_in] and session[:netzke_just_logged_out] automatically set by Netzke after login/logou
+* New: widgets now can check session[:netzke_just_logged_in] and session[:netzke_just_logged_out] automatically set by Netzke after login/logout
 
 = v0.2.11
 * Introduction of getOwnerComponent()-method to Ext.Component. It provides the Netzke widget this Component belongs to.
@@ -171,12 +171,12 @@
 
 = v0.2.3
 * FeedbackGhost will show the feedback on the top of the screen independent of the page scrolling.
-* Ext.Panel#loadComponent will accept null as url to delete the currently loaded widge
+* Ext.Panel#loadComponent will accept null as url to delete the currently loaded widget
 * Bug fix: persistent_config works again
 
 = v0.2.2
 * js_ext_config instance method added for overwriting
-* Multiuser suppor
+* Multiuser support
 * Using Rails.logger for logging
 * "config"-class method for every class inheriting Netzke::Base - for class-level configurations
 
@@ -215,7 +215,7 @@
 * JS-class code generation code slightly reworked
 
 = v0.1.0.2
-* Meta: fix outdated Manifes
+* Meta: fix outdated Manifest
 
 = v0.1.0.1
 * Meta work: replacing underscore with dash in the name
