endpoint now can call JS functions with multiple params by providing an array

--- a/CHANGELOG.rdoc
+++ b/CHANGELOG.rdoc
@@ -1,3 +1,8 @@
+= v0.6.5 - EDGE
+* enhancements
+  * An endpoint can now "call" JavaScript functions that accept multiple parameters, by specifying an array, e.g.:
+      {:some_js_function => [arg1, arg2]}
+
 = v0.6.4 - 2010-11-05
 * enhancements
   * Implemented Netzke.isLoading(), useful for testing
