--- a/TODO
+++ b/TODO
@@ -1,11 +1,7 @@
-Make plugin-wide javascripts and stylesheets load automatically.
+Caching for netzke_controller-provided JS and CSS.
 Caching - investigate reusing (fragment?) caching of Rails.
 Use Ext.Direct in the Netzke controller.
 Let specify per API point if it will use a GET or a POST request.
-Re-work generators
-
-Some day
-* make gzipping generated JS code possible
 
 
 = Ideas that didn't work out
