Fixed dynamic CSS loading for IE

--- a/CHANGELOG.rdoc
+++ b/CHANGELOG.rdoc
@@ -1,12 +1,12 @@
-= v0.6.5 - EDGE
-* fixes for the IE
+= v0.6.5 - 2011-01-11
 * enhancements
+  * various fixes for IE
   * An endpoint can now "call" JavaScript functions that accept multiple parameters, by specifying an array, e.g.:
       {:some_js_function => [arg1, arg2]}
-  * New API: +js_mixin+ method to "mixin" JavaScript objects from external files (see RDocs)
+  * New API: +js_mixin+ method to "mixin" JavaScript objects from external files (see RDocs).
   * New JS class +componentLoadMask+ property to configure a mask when a component gets dynamically loaded with +loadComponent+. Accepts the same configuration as Ext.LoadMask.
-  * +js_include+ and +css_include+ accept both symbols and strings, where strings would contain full paths to the included file, whereas symbols get expanded to full paths following simple conventions (see RDocs for details)
-  * Make some of Netzke::Core setup happen earlier in the loading process, so that we can safely use it while defining components.
+  * +js_include+ and +css_include+ accept both symbols and strings, where strings would contain full paths to the included file, whereas symbols get expanded to full paths following simple conventions (see RDocs for details).
+  * Make some of +Netzke::Core+ setup happen earlier in the loading process, so that we can safely use it while defining components.
   * Performance improvements by memoizing +Base.constantize_class_name+.
 
 * bug fix
