Disabled Rails forgery protection (temporarily, see TODO)

--- a/TODO
+++ b/TODO
@@ -1,3 +1,4 @@
+Enable Rails forgery protection after Ext.Ajax.extraParams has effect again.
 Make :items option understand also a hash.
 Caching for netzke_controller-provided JS and CSS.
 Caching - investigate reusing (fragment?) caching of Rails.
